[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gem/gem-02.png" type="Texture" id=1]
[ext_resource path="res://assets/gem/gem-03.png" type="Texture" id=2]
[ext_resource path="res://assets/gem/gem-01.png" type="Texture" id=3]
[ext_resource path="res://assets/gem/gem-04.png" type="Texture" id=4]
[ext_resource path="res://assets/gem/gem-05.png" type="Texture" id=5]
[ext_resource path="res://gem/Gem.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.1427

[node name="Gem" type="Area2D" groups=[
"gem",
]]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="GemHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Gem_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
